--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-hover-card": "^1.1.13",
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-radio-group": "^1.3.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.6",
     "@radix-ui/react-slot": "^1.2.2",
@@ -32,29 +33,33 @@
     "@radix-ui/react-toggle-group": "^1.1.9",
     "@radix-ui/react-tooltip": "^1.2.6",
     "@types/tough-cookie": "^4.0.5",
-    "alpha-vantage-cli": "^1.0.8",
     "alphavantage": "^2.5.0",
     "axios": "^1.9.0",
     "axios-cookiejar-support": "^6.0.2",
     "browserify-zlib": "^0.2.0",
+    "bson": "^6.10.3",
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "csv-parse": "^5.6.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "echarts": "^5.6.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.11.0",
     "https-browserify": "^1.0.0",
     "https-proxy-agent": "^7.0.6",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
+    "mongodb": "^6.16.0",
     "next": "^15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^5.8.0",
+    "react-syntax-highlighter": "^15.6.1",
     "remark-gfm": "^4.0.1",
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
@@ -62,6 +67,7 @@
     "tough-cookie": "^5.1.2",
     "winston": "^3.17.0",
     "yahoo-finance2": "^2.13.3",
+    "yargs-parser": "^21.1.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
